# multi_AGV_warehouse_fleet_simulator

./: .gitignore  README.md  plot_warehouse.py  pyproject.toml  requirements.txt  run_simulation.py
config/: default_warehouse.yaml
docs/: warehouse_model.md
scripts/: run_simulation.py  run_ui_api.py  verify_pipeline.py
src/analysis/: visualizations.py
src/assignment/: __init__.py  benchmark.py  cost_matrix.py  solver.py
src/simulation/: __init__.py  agv.py  engine.py  metrics.py  orders.py  stations.py
src/ui_api/: __init__.py  server.py
src/warehouse/: __init__.py  config.py  graph.py  layout.py
tests/: test_assignment.py  test_simulation.py  test_warehouse_graph.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css  types.ts
ui/src/components/: MetricsPanel.tsx  WarehouseMap.tsx
