[project]
name = "agv-fleet-simulator"
version = "0.1.0"
description = "Multi-AGV Warehouse Fleet Simulator with Deadlock-Free Path Planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core simulation
    "simpy>=4.0",
    "networkx>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # Optimization (Module 2)
    "ortools>=9.8",
    # Visualization & app
    "streamlit>=1.30",
    "matplotlib>=3.8",
    "plotly>=5.18",
    # Data & config
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
